# auto-triage-bot

./: .gitignore  PRESENTATION.md  README.md  calibrator.pkl  dashboard.html  pyproject.toml  results.json  results_clean.json
.github/workflows/: ci.yml
docs/: model_card.md  threat_model.md
posts/: case-study.md  post-lessons.md  post-quick-win.md  post-technical.md
scripts/: train_calibrator.py
src/: __init__.py  alert_parser.py  calibrated_scorer.py  correlator.py  main.py  misp_enricher.py  mitre_mapper.py  prompt_injection_detector.py  report.py  scoring_config.json  semantic_analyzer.py  triage_engine.py
test_corpus/clean/: benign_alert_01.json  benign_alert_02.json
test_corpus/injected/: suspicious_alert_01.json  suspicious_alert_02.json  suspicious_alert_03.json
tests/: test_auto_triage.py  test_calibrated_scorer.py  test_correlator_confidence.py  test_prompt_injection_detector.py
